--- a/display.html
+++ b/display.html
@@ -1,10 +1,13 @@
-<div class="col-xs-12" ng-if="progress !== 100">
-        <!-- <progressbar class="progress-striped" value="progress">{{progress | number:0}}%</progressbar> -->
-    </div>
-    <div class="slide slide-animation" ng-if="isCurrentSlideIndex($index)" ng-show="loaded" ng-repeat="slide in slides | orderBy:'dateTime':false">
+<div class="outer" ng-hide="slides.length">
+<div class ="flex-contain" >
+  <span>It doesn't look like you have any events coming up! You should add some :].</span>
+</div>  </div>
+
+
+    <div class="slide slide-animation" ng-if="isCurrentSlideIndex($index)" ng-show="loaded" ng-repeat="slide in slides | orderBy:'datetime':false">
         <div class="floorfade">
             <img class="bg" bg-image ng-src="{{slide.src}}">
             <div class="title">{{slide.name}}</div>
-            <div class="dateTime">{{slide.fullDate}}</div>
+            <div class="dateTime">{{ slide.datetime | date:"fullDate"}}  |  {{ slide.datetime | date:"hh:mm a"}}</div>
         </div>
     </div>
