Accounted for loading and no-slides state

--- a/display.html
+++ b/display.html
@@ -1,3 +1,8 @@
+<div class="outer" ng-show="displayLoadingIndicator" slide-animation>
+<div class ="flex-contain">
+  <span>loading</span>
+</div>  </div>
+
 <div class="outer" ng-if="!slides.length" slide-animation>
 <div class ="flex-contain">
   <span>It doesn't look like you have any events coming up! Perhaps you should add some?</span>
