--- a/display.html
+++ b/display.html
@@ -2,7 +2,7 @@
 
 <div class="outer" slide-animation ng-show="displayLoadingIndicator || slides.length == 0">
 <div class ="flex-contain">
-  <span ng-show="displayLoadingIndicator">loading</span>
+  <div class="text-center" style="top: 50%"ng-show="displayLoadingIndicator"><img src="images/ripple.gif" alt="Loading slides"><br/><span class="loadingText">Loading Events</span></div>
   <span ng-show="slides.length == 0 && !displayLoadingIndicator">It doesn't look like you have any events coming up! Perhaps you should add some?</span>
 </div>  
 </div>
@@ -10,8 +10,8 @@
 
     <div class="slide slide-animation" ng-if="isCurrentSlideIndex($index)" ng-repeat="slide in slides | orderBy:'datetime':false">
         <div class="floorfade">
-            <img class="bg" bg-image ng-src="data:{{slide.format}};base64,{{slide.src}}"/>">
+            <img class="bg" bg-image ng-src="data:{{slide.format}};base64,{{slide.src}}">
             <div class="title">{{slide.name}}</div>
-            <div class="dateTime">{{ slide.datetime | date:"fullDate"}}  |  {{ slide.datetime | date:"hh:mm a"}}</div>
+            <div class="dateTime">{{ slide.datetime | date:"fullDate"}}  &nbsp;    <span class="timeTime">{{ slide.datetime | date:"h:mm a"}}</span></div>
         </div>
     </div>
